--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "bootstrap-vue": "^2.0.0-rc.1",
     "vue": "^2.5.11"
   },
   "browserslist": [
