--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bootstrap-vue": "^2.0.0-rc.1",
+    "form-serialize": "^0.7.2",
+    "moment": "^2.20.1",
     "vue": "^2.5.11"
   },
   "browserslist": [
